# Lex

./: CMakeLists.txt  NOTICE
include/: Structurizer.hpp
include/lex/: Scanner.hpp  Structurizer.hpp
src/: Scanner.cpp  Structurizer.cpp
